--- a/webapp/package.json
+++ b/webapp/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "core-js": "3.29.1",
     "mattermost-redux": "5.33.1",
+    "@brightscout/mattermost-ui-library": "1.1.18",
     "react": "18.2.0",
     "react-redux": "8.0.5",
     "redux": "4.2.1",
