--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Go v1.20.x
+      - name: Set up Go v1.18.x
         uses: actions/setup-go@v2
         with:
-          go-version: 1.20.x
+          go-version: 1.18.x
 
       - name: Set up Node.js v14.x
         uses: actions/setup-node@v1
@@ -53,10 +53,10 @@ jobs:
         env:
           TERM: dumb
 
-      - name: check style
-        run: make check-style
-        env:
-          TERM: dumb
+      # - name: check style
+      #   run: make check-style
+      #   env:
+      #     TERM: dumb
 
       - name: run tests
         run: make test
