--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,12 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+        
+      - name: Changelog
+        uses: scottbrenner/generate-changelog-action@master
+        id: Changelog
+        env:
+          REPO: ${{ github.repository }}
 
       - name: Upload Release Assets
         uses: actions/upload-release-asset@v1
