--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
+---
 name: Release
-
 on:
   push:
     tags:
-      - 'v*'
-
+      - v*
 jobs:
   build_and_release:
     name: Build and release
@@ -14,15 +13,12 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.20.x
-
       - name: Set up Node.js v14.x
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
           registry-url: https://npm.pkg.github.com/
-
       - uses: actions/checkout@v2
-
       - name: Cache go modules
         uses: actions/cache@v2
         with:
@@ -30,7 +26,6 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-
       - name: Cache node modules
         uses: actions/cache@v2
         with:
@@ -38,7 +33,6 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-
       - name: Build and bundle the plugin
         id: build
         run: |
@@ -46,10 +40,10 @@ jobs:
           echo ::set-output name=BUNDLE_NAME::$(cd dist; ls *.tar.gz)
         env:
           TERM: dumb
-
       - name: ci/publish-release
-      run: |
-        gh release create "$GITHUB_REF_NAME" --title "$GITHUB_REF_NAME" --notes-file release-notes.md  *.tar.gz
-      working-directory: dist
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create "$GITHUB_REF_NAME" --title "$GITHUB_REF_NAME"
+          --notes-file release-notes.md  *.tar.gz
+        working-directory: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
